// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionSummary should render a table with monthly account values 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          Account
        </th>
        <th>
          2018-01
        </th>
        <th>
          2018-02
        </th>
        <th>
          2018-03
        </th>
        <th>
          Mean
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          style={
            Object {
              "textIndent": "1em",
            }
          }
        >
          a5
        </td>
        <td>
          0.00
        </td>
        <td>
          -9.99
        </td>
        <td>
          0.00
        </td>
        <td>
          -3.33
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textIndent": "2em",
            }
          }
        >
          a2
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textIndent": "1em",
            }
          }
        >
          a6
        </td>
        <td>
          -9.99
        </td>
        <td>
          9.99
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textIndent": "2em",
            }
          }
        >
          a3
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textIndent": "2em",
            }
          }
        >
          a4
        </td>
        <td>
          -19.98
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
        <td>
          -6.66
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textIndent": "3em",
            }
          }
        >
          a1
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
        <td>
          0.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TransactionSummary should render nicely with default props 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          Account
        </th>
        <th>
          2017-03
        </th>
        <th>
          2017-04
        </th>
        <th>
          2017-05
        </th>
        <th>
          2017-06
        </th>
        <th>
          2017-07
        </th>
        <th>
          2017-08
        </th>
        <th>
          2017-09
        </th>
        <th>
          2017-10
        </th>
        <th>
          2017-11
        </th>
        <th>
          2017-12
        </th>
        <th>
          2018-01
        </th>
        <th>
          2018-02
        </th>
        <th>
          Mean
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
